--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@nuxt/ui": "^2.18.6",
+    "@nuxtjs/supabase": "^1.4.0",
     "nuxt": "^3.13.0",
     "vue": "latest",
     "vue-router": "latest"
@@ -19,6 +20,7 @@
     "eslint": "^9.11.1",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
-    "prettier": "^3.3.3"
+    "prettier": "^3.3.3",
+    "zod": "^3.23.8"
   }
 }
